k8/africannames-postgres-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  labels:
    io.kompose.service: africannames-postgres-db
  name: africannames-postgres-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: africannames-postgres-db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (HEAD)
      labels:
        io.kompose.network/african-names-network: "true"
        io.kompose.service: africannames-postgres-db
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              valueFrom:
                secretKeyRef:
                  name: afnsecrets
                  key: AFN_POSTGRES_DB
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: afnsecrets
                  key: AFN_POSTGRES_PASSWORD
            - name: POSTGRES_USER
              valueFrom:
                secretKeyRef:
                  name: afnsecrets
                  key: AFN_POSTGRES_USER
            - name: volumes
              value: ./postgres-data:/var/lib/postgresql/data
          image: postgres:13.2-alpine
          name: africannames-postgres-db
          ports:
            - containerPort: 5432
          resources: {}
      restartPolicy: Always
