k8/africannamesfront-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: africannamesfront
  name: africannamesfront
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: africannamesfront
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/african-names-network: "true"
        io.kompose.service: africannamesfront
    spec:
      containers:
        - image: africannamesfront
          name: africannames-front
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
