k8/africannameswebapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: africannameswebapp
  name: africannameswebapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: africannameswebapp
  template:
    metadata:
      labels:
        app: africannameswebapp
    spec:
      containers:
        - env:
            - name: PROD_URL_HOST
              valueFrom:
                secretKeyRef:
                  name: afnsecrets
                  key: AFN_POSTGRES_HOST
            - name: SPRING_DATASOURCE_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: afnsecrets
                  key: AFN_POSTGRES_PASSWORD
            - name: SPRING_DATASOURCE_URL
              valueFrom:
                secretKeyRef:
                  name: afnsecrets
                  key: AFN_POSTGRES_URL
            - name: SPRING_DATASOURCE_USERNAME
              valueFrom:
                secretKeyRef:
                  name: afnsecrets
                  key: AFN_APP_USER
            - name: SPRING_JPA_HIBERNATE_DDL_AUTO
              value: none
            - name: SPRING_PROFILES_ACTIVE
              value: prod
            - name: SPRING_SECURITY_USER_NAME
              valueFrom:
                secretKeyRef:
                  name: afnsecrets
                  key: AFN_APP_USER
            - name: SPRING_SECURITY_USER_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: afnsecrets
                  key: AFN_APP_PASSWORD
          image: ghcr.io/tooflex/african-names-server/backend:master
          name: africannames-webapp
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
