k8/africannameswebapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
  name: africannameswebapp
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: africannameswebapp
status:
  loadBalancer: {}
