k8/african-names-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: african-names-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/african-names-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/african-names-network: "true"
